# personal_email_ai_project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py  rag_prompts.py  tools.py
src/schemas/: schema.sql
src/utils/: convert_mbox.py  db_connections.py  db_queries.py  embed_text.py  import_embedded_to_vectorDB.py
