[project]
name = "personal-email-ai-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Josh C",email = "psycholomo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "html2text (>=2025.4.15,<2026.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "openai (>=2.30.0,<3.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "gradio (>=6.10.0,<7.0.0)",
    "instructor (>=1.14.5,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
